--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@
     border: 1px solid black;
 }
 
-.blue {
+/* .blue {
     background-color: blue;
 }
 
@@ -13,7 +13,7 @@
 
 .red {
     background-color: red;
-}
+} */
 
 * {
     margin: 0;
