change to jpeg from png cause can't see on phone

--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@
 
 html, body {
     touch-action: pan-y;
+    touch-action: manipulation;
     overscroll-behavior-y: none ;
     overscroll-behavior-x: none;
 }
