sfhit key for earser on chrome

--- a/css.css
+++ b/css.css
@@ -3,6 +3,9 @@
     padding: 0;
 }
 
+canvas {
+    cursor: crosshair;
+}
 html, body {
     /* touch-action: pan-y; */
     /* touch-action: manipulation; */
